fix: make Dialog text left aligned

--- a/styles/Dialog.module.scss
+++ b/styles/Dialog.module.scss
@@ -9,6 +9,8 @@
   color: #000;
 
   :global .window {
+    text-align: left;
+
     :global .title-bar,
     :global .window-body {
       cursor: default;
